welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:3: error: type mismatch;
 found   : Unit
 required: Int
    cpt=deuxl(2*a,cpt)
             ^